# Dependency

./: .autotools  .cproject  .gitignore  .gitmodules  .project  CMakeLists.txt  INSTALL  README.md  README_AE.md  REQUIREMENTS  STATUS  build.bash  build.sh  data.txt  environment.sh  go.mod  go.sum
.github/workflows/: pythonpackage.yml
01-paper/00/: main.tex
02-dependency/: CMakeLists.txt  README.md  build.bash
02-dependency/lib/: CMakeLists.txt
02-dependency/lib/DA/: CMakeLists.txt  Expr.cpp  Expr.h
02-dependency/lib/DCC/: CMakeLists.txt  DependencyControlCenter.cpp  DependencyControlCenter.h  general.cpp  general.h
02-dependency/lib/DMM/: CMakeLists.txt  DAInstruction.cpp  DAInstruction.h  DBasicBlock.cpp  DBasicBlock.h  DFunction.cpp  DFunction.h  DInput.cpp  DInput.h  DLInstruction.cpp  DLInstruction.h  DModule.cpp  DModule.h  DataManagement.cpp  DataManagement.h
02-dependency/lib/DRA/: CMakeLists.txt  DBasicBlock.cpp  DBasicBlock.h  DFunction.cpp  DFunction.h  DInput.cpp  DInput.h  DLInstruction.cpp  DModule.cpp  DataManagement.cpp  DataManagement.h
02-dependency/lib/JSON/: json.cpp
02-dependency/lib/RPC/: Base.pb.cc  Base.pb.h  CMakeLists.txt  Dependency.pb.cc  Dependency.pb.h  DependencyRPC.grpc.pb.cc  DependencyRPC.grpc.pb.h  DependencyRPC.pb.cc  DependencyRPC.pb.h  DependencyRPCClient.cpp  DependencyRPCClient.h  Input.pb.cc  Input.pb.h  Statistic.pb.cc  Statistic.pb.h  Task.pb.cc  Task.pb.h  a2l.pb.cc  a2l.pb.h  build-protoc.sh
02-dependency/lib/STA/: CMakeLists.txt  StaticAnalysisResult.cpp  StaticAnalysisResult.h
02-dependency/tools/: CMakeLists.txt
02-dependency/tools/A2I/: CMakeLists.txt  a2i.cpp
02-dependency/tools/A2L/: CMakeLists.txt  a2l.cpp
02-dependency/tools/CA/: CMakeLists.txt  ca.cpp
02-dependency/tools/DA/: CMakeLists.txt  da.cpp
02-dependency/tools/DRA/: CMakeLists.txt  dra.cpp
03-syzkaller/: Makefile  build.bash
03-syzkaller/executor/: common_linux.h  defs.h  executor.cc  syscalls.h
03-syzkaller/prog/: checksum_test.go  clone.go  mutation.go  rand.go
03-syzkaller/sys/: sys.go
03-syzkaller/syz-ci/: jobs.go  manager.go  managercmd.go  syz-ci.go  updater.go
03-syzkaller/syz-fuzzer/: dependency.go  dependencyMutate.go  dependency_test.go  fuzzer.go  proc.go  testing.go  workqueue.go
03-syzkaller/syz-hub/: http.go  hub.go
03-syzkaller/syz-manager/: cover.go  html.go  hub.go  manager.go  rpc.go
03-syzkaller/vm/: vm.go  vm_test.go
04-experiment_script/: README.md
04-experiment_script/json/: default.json  dra.json  syzkaller.json
04-experiment_script/python/: default.py  main.py  read_result.py  read_stats.py  run.py
04-experiment_script/read_result/: device.go  read.go
04-experiment_script/taint_info/: taint_info_ion_ioctl_serialize  taint_info_rtc_dev_ioctl_serialize
04-script/: Base_pb2.py  DependencyRPC_pb2.py  Dependency_pb2.py  Input_pb2.py  Statistic_pb2.py  Task_pb2.py  build.bash  config.py  default.py  main.py  read_data.py  read_result.py  read_stats.py  run.md  run.py  syzkaller.json
04-script/bash/: remove.bash
04-script/con/: config.py  devices.py  run.py
04-script/config/: DependencyRPC_pb2.py  axis.py  config.py  data.py  default.json  default.py  devices.py  result.py  run.py  stats.py  syzkaller.json
04-script/default/: DependencyRPC_pb2.py  Dependency_pb2.py  Input_pb2.py  Task_pb2.py  default.py  run.py
04-script/json/: default.json
04-script/python/: Base_pb2.py  DependencyRPC_pb2.py  Dependency_pb2.py  Input_pb2.py  Statistic_pb2.py  Task_pb2.py  config.py  default.py  main.py  read_axis.py  read_result.py  read_stats.py  run.py
04-script/read/: axis.py  data.py  result.py  stats.py
04-script/result/: DependencyRPC_pb2.py  README.md  axis.py  data.py  default.py  read_result.py  result.py  statistics.py  stats.py
04-script/taint_info/: taint_info_conf_cdrom_serialize  taint_info_conf_snd_seq_serialize
05-proto/: Base.proto  Dependency.proto  DependencyRPC.proto  Input.proto  Statistic.proto  Task.proto  a2l.proto  build-protoc.bash  build.bash  build_protoc.bash  remove.bash
05-rpc/: DependencyRPC.proto
build_script/: build-grpc.bash  build.bash  environment.sh
executor/: common_linux.h  defs.h  executor.cc  syscalls.h
lib/: CMakeLists.txt
lib/DCC/: CMakeLists.txt  DependencyControlCenter.cpp  DependencyControlCenter.h  general.cpp  general.h
lib/DRA/: BasicBlockAll.cpp  BasicBlockAll.h  CMakeLists.txt  DAInstruction.cpp  DAInstruction.h  DBasicBlock.cpp  DBasicBlock.h  DFunction.cpp  DFunction.h  DInput.cpp  DInput.h  DLInstruction.cpp  DLInstruction.h  DModule.cpp  DModule.h  DataASM.cpp  DataASM.h  DataManagement.cpp  DataManagement.h  FunctionAll.cpp  FunctionAll.h  InformationOfLine.cpp  InformationOfLine.h  InformationOfSourceCode.cpp  InformationOfSourceCode.h  InstructionASM.cpp  InstructionASM.h  InstructionLLVM.cpp  InstructionLLVM.h  ModuleAll.cpp  ModuleAll.h
lib/JSON/: CMakeLists.txt  json.cpp
lib/RPC/: CMakeLists.txt  Data.pb.cc  Data.pb.h  Data.proto  DependencyManager.grpc.pb.cc  DependencyManager.grpc.pb.h  DependencyManager.pb.cc  DependencyManager.pb.h  DependencyManager.proto  DependencyManger.grpc.pb.cc  DependencyManger.grpc.pb.h  DependencyManger.pb.cc  DependencyManger.pb.h  DependencyRPC.grpc.pb.cc  DependencyRPC.grpc.pb.h  DependencyRPC.pb.cc  DependencyRPC.pb.h  DependencyRPC.proto  DependencyRPCClient.cpp  DependencyRPCClient.h  a2l.grpc.pb.cc  a2l.grpc.pb.h  a2l.pb.cc  a2l.pb.h  a2l.proto  build-protoc.sh
lib/STA/: ResType.h  StaticAnalysisResult.cpp  StaticAnalysisResult.h
pkg/csource/: generated.go
pkg/dra/: DependencyRPC.go  DependencyRPC.pb.go  DependencyRPC.proto  DependencyRPCClient.go  DependencyRPCServer.go
pkg/host/: host_linux_test.go
pkg/instance/: instance.go
pkg/ipc/: ipc.go
pkg/log/: log.go
prog/: clone.go  minimization.go  mutation.go  prog.go
script/: get-result-from-terran.sh  run.md
script/con/: config.py  (+2 more)
syz-fuzzer/: dependency.go  dependency_test.go  fuzzer.go  proc.go  workqueue.go
syz-manager/: manager.go
tools/: CMakeLists.txt
tools/DRA/: CMakeLists.txt  a2l.cpp  dra.cpp
(+272 files in other folders)
